@@ -1,3 +1,8 @@
+2005-05-07  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/prettytable.c: (create_scaled_icon): Don't warn if icon is
+	missing. Closes #300315.
+
 2005-04-10  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* NEWS: Released 2.10.1.
